fixed critical review issues: added client_secret validation, registration rate limiting, session regeneration bug, exact path matching, dead code removal